--- a/.env
+++ b/.env
@@ -3,17 +3,17 @@
 
 
 
-SESSION_ID="RAHEEM-XMD-2>>>PoZXHABR#avdbUBpb_iJdpAgpgxTif2tKWE4y30tADqir93bdUqQ"
+SESSION_ID="GLEN-X>>>PoZXHABR#avdbUBpb_iJdpAgpgxTif2tKWE4y30tADqir93bdUqQ"
 AUTO_READ_STATUS=true
-STATUS_READ_MSG="*🐳Status Seen By RAHEEM-XMD-2 ⚡*"
+STATUS_READ_MSG="*🐳Status Seen By GLEN-X ⚡*"
 AUTO_STATUS_REPLY=false
 AUTO_REJECT_CALLS=false
 MODE="public"
 WELCOME=false
 AUTO_READ_MESSAGES=false
 AUTO_TYPING=false
-OWNER_NAME="RAHEEM-CM"
-OWNER_NUMBER="255763111390"
+OWNER_NAME="Glen Tech"
+OWNER_NUMBER="254104882369"
 AUTO_RECORDING=false
 ALWAYS_ONLINE=false
 AUTO_BLOCK=true
